fix: fix keyboard shortcut caps+shift

--- a/scss/components/_text-area.scss
+++ b/scss/components/_text-area.scss
@@ -1,7 +1,7 @@
 .text-area {
   position: relative;
   width: 100%;
-  height: 350px;
+  height: 250px;
   border-radius: 6.4px;
   border: none;
   resize: none;
